# simplex-python

./: .gitignore  KNOWLEDGEBASE.md  LICENSE  MANIFEST.in  README.md  publish.sh  pyproject.toml  requirements-dev.txt  requirements.txt
.claude-plugin/: marketplace.json  plugin.json
examples/: editor_example.py  full_example.py  polling_example.py
plugins/simplex/skills/reference/: SKILL.md
simplex/: __init__.py  _http_client.py  client.py  errors.py  types.py  webhook.py
simplex/cli/: auth.py  config.py  connect.py  editor.py  main.py  output.py  run.py  send.py  sessions.py  variables.py  workflows.py
skills/reference/: SKILL.md
tests/: __init__.py  test-01-sdk-client-methods.md  test-02-cli-editor-command.md  test-03-cli-connect-command.md  test-04-base-url-configuration.md  test-05-sse-streaming-scenarios.md  test-06-workflow-crud.md  test-07-end-to-end-flow.md  test-08-error-handling.md  test_integration.py  test_structure.py
