[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simplex"
version = "3.0.3"
description = "Official Python SDK for the Simplex API"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Simplex", email = "support@simplex.sh"}
]
keywords = ["simplex", "api", "sdk", "workflow", "automation", "browser", "scraping"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.25.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.scripts]
simplex = "simplex.cli.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "mypy>=1.0.0",
    "types-requests>=2.25.0",
]

[project.urls]
Homepage = "https://simplex.sh"
Documentation = "https://docs.simplex.sh"
Repository = "https://github.com/simplexlabs/simplex-python"

[tool.setuptools.packages.find]
include = ["simplex*"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
